# psvr2toolkit-installer

./: .gitignore  README.md  __main__.py  build.ps1  notes.txt  pyproject.toml
src/psvr2_helper/: __main__.py
src/psvr2toolkit_installer/: __init__.py  __main__.py  github.py  helpers.py  vars.py
src/psvr2toolkit_installer/steam/: drivers.py  paths.py  steamvr.py
typings/SteamPathFinder/: SteamPathFinder.pyi  __init__.pyi
