[project]
name = "psvr2toolkit-installer"
version = "0.2.0"
description = "An unofficial tool that can install and configure the PlayStation VR2 Toolkit."
readme = "README.md"
requires-python = ">= 3.14"
dependencies = [
  "SteamPathFinder",
  "aiohttp[speedups]",
  "nicegui",
  "pywebview",
  "signify"
]

[project.urls]
Funding = "https://ko-fi.com/maidscientistizutsumimarin"
Source = "https://github.com/MaidScientistIzutsumiMarin/psvr2toolkit-installer"

[project.scripts]
psvr2toolkit-installer = "psvr2toolkit_installer.__main__:main"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"
