[project]
name = "psvr2toolkit-installer"
description = "An unofficial tool that can install and configure the PlayStation VR2 Toolkit."
readme = "README.md"
requires-python = ">= 3.14"
dependencies = [
  "SteamPathFinder",
  "aiofiles",
  "githubkit",
  "nicegui",
  "pythonnet @ git+https://github.com/pythonnet/pythonnet@python3.14",
  "pywebview",
  "signify",
  "winloop"
]
dynamic = ["version"]

[project.urls]
Funding = "https://ko-fi.com/maidscientistizutsumimarin"
Source = "https://github.com/MaidScientistIzutsumiMarin/psvr2toolkit-installer"

[project.scripts]
psvr2toolkit-installer = "psvr2toolkit_installer.__main__:main"

[project.optional-dependencies]
dev = ["pyinstaller"]

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"
